plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'NoticeBoard API Server'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

configurations.all {
	resolutionStrategy {
		force 'io.jsonwebtoken:jjwt-api:0.11.5'
		force 'io.jsonwebtoken:jjwt-impl:0.11.5'
		force 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// 기본 (DB 연동, 웹 연결, 데이터베이스 - MySQL)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.mysql:mysql-connector-j:8.3.0'

	// .env 읽기(dotenv 라이브러리)
	implementation 'me.paulschwarz:spring-dotenv:3.0.0'
//	implementation 'io.github.cdimascio:dotenv-java:3.0.0'

	// Lombok (코드 단순화)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Security + Validation + BCrypt(비밀번호 암호화)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// OAuth 2.0
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// 이메일 발송
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Gmail
	implementation 'com.google.api-client:google-api-client:2.6.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'

	// DevTools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Swagger (API 문서 자동화)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// 문자 발송
	implementation 'com.twilio.sdk:twilio:10.9.2'
	implementation 'io.github.cdimascio:dotenv-java:2.2.4'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
